--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -64,6 +64,12 @@
                 *(Les mots de passe sont hashés dans la base de données.)*
             </p>
         </div>
+        <hr>
+        <div class="mt-4">
+            <p>Bonjour, j'ai fait le maximum que j'ai pu faire dans le temps imparti. Il me manquait du temps pour finir.</p>
+        </div>
+         <hr>
+<div class="mt-4">Télécharger la base de donnée: <a href="{{ asset('uploads/institut.sql') }}" download>Cliquer ici</a> </div>
     </div>
 </div>
 {% endblock %}
